--- a/app/src/main/res/layout/fragment_baby_feeds.xml
+++ b/app/src/main/res/layout/fragment_baby_feeds.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginEnd="@dimen/_5dp"
+            android:visibility="invisible"
             android:backgroundTint="@color/dim_black"
             android:text="@string/action_update_prescription"
             app:cornerRadius="@dimen/_25sp" />
