--- a/app/src/main/res/layout/fragment_dhm_orders.xml
+++ b/app/src/main/res/layout/fragment_dhm_orders.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".screens.dashboard.dhm.DhmOrdersFragment">
 
@@ -17,12 +17,12 @@
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search"
-            app:iconifiedByDefault="false"
-            app:queryBackground="@android:color/transparent"
-            app:queryHint="@string/query_ip_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="@string/query_ip_search" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -42,24 +42,35 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/action_add_recipient"
-            app:cornerRadius="@dimen/_35dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/design_default_color_error"
-            android:text="@string/action_add_recipient" />
+            android:text="@string/action_add_recipient"
+            app:cornerRadius="@dimen/_35dp" />
     </LinearLayout>
 
-    <include
-        android:id="@+id/patient_list_container"
-        layout="@layout/patient_list_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ln_search" />
+        android:layout_below="@+id/ln_search"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/order_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <include
+            android:id="@+id/patient_list_container"
+            layout="@layout/patient_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/pb_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
-</LinearLayout>
+</RelativeLayout>
