--- a/app/src/main/res/layout/fragment_dhm_orders.xml
+++ b/app/src/main/res/layout/fragment_dhm_orders.xml
@@ -57,6 +57,7 @@
         android:orientation="vertical">
 
         <include
+            android:id="@+id/inc_title"
             layout="@layout/order_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
