--- a/app/src/main/res/layout/side_menu.xml
+++ b/app/src/main/res/layout/side_menu.xml
@@ -296,11 +296,11 @@
             android:background="@color/white" />
 
         <LinearLayout
+            android:id="@+id/ln_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_15dp"
             android:background="?attr/selectableItemBackground"
-
             android:clickable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
